maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:28: error: value etat is not a member of Unit
possible cause: maybe a semicolon is missing before `value etat'?
    } etat = 0
      ^